# healthcare-fraud-openenv

./: .gitignore  README.md  amber-manifest.json5  pyproject.toml  requirements.txt  scenario.toml
.github/workflows/: publish-green-agent.yml
archive/grpo_training/training/: eval_metrics.py  orchestrate_cycles_v2.py
blog/: hf_blog_post.md
docs/: long_term_goals.md  reward_hacking_lessons.md  study_documentation.md  training_ops_notes.md  upstream_issues.md
environment/: __init__.py  claims_simulator.py  client.py  data_loader.py  mixed_data_loader.py  models.py  openenv.yaml  pyproject.toml
environment/server/: __init__.py  app.py  environment.py  requirements.txt
evaluation/: agents.py  harness.py
experiments/01_baseline_comparison/: run.py
experiments/01_baseline_comparison/results/: 20260402_011224_RandomAgent.json  20260402_011224_ThresholdAgent.json  20260402_011224_comparison.json  20260402_100937_BudgetAwaregpt-oss-120b_free.json  20260402_100937_NaiveLLMgpt-oss-120b_free.json  20260402_100937_RandomAgent.json  20260402_100937_ThresholdAgent.json  20260402_100937_comparison.json  20260402_101758_RandomAgent.json  20260402_101758_ThresholdAgent.json  20260402_235153_RandomAgent.json  20260402_235153_ThresholdAgent.json  20260402_235707_RandomAgent.json  20260402_235707_ThresholdAgent.json  20260403_001215_RandomAgent.json  20260403_001215_ThresholdAgent.json  20260403_002247_RandomAgent.json  20260403_002247_ThresholdAgent.json  20260403_002516_RandomAgent.json  20260403_002516_ThresholdAgent.json  20260403_004818_RandomAgent.json  20260403_004818_ThresholdAgent.json  20260403_004956_RandomAgent.json  (+17 more)
experiments/02_budget_ablation/: run.py
experiments/03_memory_ablation/: run.py
experiments/04_reinforce_poc/: run.py
green_agent/: Dockerfile  pyproject.toml
green_agent/.github/workflows/: build-and-push.yml
green_agent/src/: agent.py  executor.py  messenger.py  server.py
notebooks/: 01_results_analysis.ipynb
purple_agent/: Dockerfile  pyproject.toml
purple_agent/src/: agent.py  executor.py
scripts/: early_probe.sh  setup_vastai.sh
tests/: smoke_test.py
training/: harvest_episodes.py  launch_train.sh  orchestrate_cycles_v2.py  train_gspo_v2.py
(+85 files in other folders)
